# GALGO-2.0

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.md  linux_compile.txt
prjTest/prjTest/: prjTest.vcxproj
prjTestVS2015/: prjTestVS2015.sln
prjTestVS2015/prjTestVS2015/: prjTestVS2015.vcxproj  prjTestVS2015.vcxproj.filters
prjTestVS2017/: prjTestVS2017.sln
prjTestVS2017/prjTest/: prjTest.vcxproj  prjTest.vcxproj.filters
src/: Chromosome.hpp  CollectiveCrossover.cpp  Config.hpp  Evolution.hpp  FrontRearCrossover.cpp  Galgo.hpp  GeneticAlgorithm.hpp  HighDimensionalCrossover.cpp  HrbridCrossover.cpp  P1XO + Rastrigin function.csv  Parameter.hpp  Population.hpp  Randomize.hpp  RingCrossover.cpp  TestFunction.hpp  TestTypes.hpp  example.cpp
src/result/: Calculate.ipynb  experiment result.xlsx
src/result/.ipynb_checkpoints/: Calculate-checkpoint.ipynb
test/: Benchmark.hpp  Cec17.hpp  Crossover.hpp  OtherFuctions.hpp  Selection.hpp
test/Binairo/: Algorithm.h  GA.h  Matrice.h  MatriceUtil.h  Solution-ct01.txt  Solution-ct02.txt  Solution-ct03.txt  Solution-ct04.txt  Solution-ct05.txt  Solution-ct06.txt  Solution-ct07.txt  Solution-ct08.txt  Solution-ct09.txt  Solution-ct10.txt  Solution-ct11.txt  Solution-ct12.txt  Solution-ct13.txt  Solution-ct14.txt  Solution-hard.txt  Solution-hard2.txt  hard.txt  hard2.txt  main.cpp
test/Classic/: CollectiveCrossoverFunctions.hpp  FrontRearCrossoverFunctions.hpp  Functions.hpp  HighDimensionalCrossoverFunctions.hpp  HybridCrossoverFunctions.hpp  RingCrossoverFunctions.hpp
test/Types/: TestTypes.hpp
(+692 files in other folders)
